--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "require": {
         "phpmailer/phpmailer": "^6.9",
-        "intervention/image": "^3.7"
+        "intervention/image": "^3.7",
+        "vlucas/phpdotenv": "^5.6"
     }
 }
